--- a/package.json
+++ b/package.json
@@ -1,13 +1,17 @@
 {
-  "name": "shoppingList",
+  "name": "react-shopping-list",
   "version": "1.0.0",
   "description": "Shopping List is an app that compares shopping list prices in different places.",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/sergiogomes/react-shopping-list"
+  },
   "keywords": [],
-  "author": "",
+  "author": "SergioPow",
   "license": "ISC",
   "dependencies": {
     "lodash": "^4.17.4",
